<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudentActivity">

    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/add_profile_image_id"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/chibichubby" />

            <Button
                android:id="@+id/add_gallery_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:padding="4dp"
                android:layout_gravity="center_horizontal"
                android:background="#56A8E3"
                android:fontFamily="@font/avenir_roman"
                android:gravity="center"
                android:text="@string/choose_from_gallery"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#ffff" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_roman">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_student_name_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:hint="@string/name"
                    android:textSize="12sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_roman">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_student_no_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:hint="@string/student_number"
                    android:textSize="12sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/avenir_roman">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_student_address_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:hint="@string/address"
                    android:textSize="12sp" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:paddingLeft="4dp"
                android:paddingTop="8dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/choose_age"
                android:textSize="12sp"
                tools:ignore="NestedWeights" />


            <Spinner
                android:id="@+id/add_age_spinner_id"
                android:layout_width="0dp"
                android:paddingEnd="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/avenir_roman">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_grade_section_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:hint="@string/grade_and_section"
                    android:textSize="12sp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/avenir_roman">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_mother_name_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_roman"
                        android:hint="Mother's Name"
                        android:textSize="12sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/avenir_roman">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_father_name_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_roman"
                        android:hint="Father's Name"
                        android:textSize="12sp" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/avenir_roman">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_mother_contact_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_roman"
                        android:hint="@string/contact_number"
                        android:textSize="12sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/avenir_roman">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_father_contact_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_roman"
                        android:hint="@string/contact_number"
                        android:textSize="12sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingTop="4dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_roman"
                android:text="Subject"
                android:textSize="10sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="16dp"
                android:layout_marginStart="20dp"
                android:background="#979797" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/avenir_roman"
                android:text="Adviser"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_roman">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_adviser_name_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:hint="@string/adviser_s_name"
                    android:textSize="12sp" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_btn_subject_advisory_id"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="#FFAA1F"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/add_subject_and_advisory"
                android:textColor="#ffff"
                android:textSize="12sp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />


            <Button
                android:id="@+id/add_btn_save_id"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="#56A8E3"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/save"
                android:textColor="#ffff"
                android:textSize="12sp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />


            <Button

                android:id="@+id/add_btn_delete_id"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="#979797"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/delete"
                android:textColor="#ffff"
                android:textSize="12sp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />


        </LinearLayout>


    </LinearLayout>
</RelativeLayout>