<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/student_profile_image_id"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/chibichubby" />

            <TextView
                android:id="@+id/student_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_roman"
                android:gravity="center"
                android:text="@string/reyes_kenji"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingEnd="16dp">

                <TextView
                    android:id="@+id/student_no_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:gravity="end"
                    android:textSize="12sp"
                   android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:text="@string/lrn_0002" />

                <TextView
                    android:id="@+id/age_id"
                    android:textSize="12sp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:gravity="end"
                    android:text="@string/_7_years_old" />

            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="#979797" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp">

                <TextView
                    android:textSize="12sp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:id="@+id/grade_section_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:text="@string/grade_ii_st_bernadette" />

                <TextView
                    android:textSize="12sp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:id="@+id/contact_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:text="@string/_09981235678" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_launcher"  />

            <TextView
                android:layout_marginStart="4dp"
                android:id="@+id/address_id"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/_14_fruit_st_admiral_subdivision_las_pinas_city"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/icon_layout"
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#E5988D"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:orientation="vertical">


                        <TextView
                            android:id="@+id/mother_name_id"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:fontFamily="@font/avenir_roman"
                            android:gravity="center_vertical"
                            android:text="@string/patricia_reyes"
                            android:textColor="#fff"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/mother_contact_id"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:fontFamily="@font/avenir_roman"
                            android:gravity="start"
                            android:text="@string/_09981235678"
                            android:textColor="#fff"
                            android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="#66ADCB"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/father_name"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:fontFamily="@font/avenir_roman"
                        android:gravity="center_vertical"
                        android:text="@string/patricio_reyes"
                        android:textColor="#fff"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/father_contact_id"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:fontFamily="@font/avenir_roman"
                        android:gravity="start"
                        android:text="@string/_09981235678"
                        android:textColor="#fff"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/subject"
                android:textSize="12sp" />

            <View
                android:layout_width="2dp"
                android:layout_gravity="center_vertical"
                android:layout_height="12dp"
                android:layout_marginStart="20dp"
                android:background="#979797" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/teacher"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/adviser_id"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:text="@string/ms_fatima_bernada"
            android:textSize="14sp"
            android:fontFamily="@font/avenir_roman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--<include layout="@layout/teacher_content" />-->

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/subject"
                android:textSize="12sp" />

            <View
                android:layout_width="2dp"
                android:layout_gravity="center_vertical"
                android:layout_height="12dp"
                android:layout_marginStart="20dp"
                android:background="#979797" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/teacher"
                android:textSize="12sp" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/subject"
            android:textSize="12sp" />

        <View
            android:layout_width="2dp"
            android:layout_gravity="center_vertical"
            android:layout_height="12dp"
            android:layout_marginStart="20dp"
            android:background="#979797" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/teacher"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/subject"
            android:textSize="12sp" />

        <View
            android:layout_width="2dp"
            android:layout_gravity="center_vertical"
            android:layout_height="12dp"
            android:layout_marginStart="20dp"
            android:background="#979797" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/teacher"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/subject"
            android:textSize="12sp" />

        <View
            android:layout_width="2dp"
            android:layout_gravity="center_vertical"
            android:layout_height="12dp"
            android:layout_marginStart="20dp"
            android:background="#979797" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/teacher"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/subject"
            android:textSize="12sp" />

        <View
            android:layout_width="2dp"
            android:layout_gravity="center_vertical"
            android:layout_height="12dp"
            android:layout_marginStart="20dp"
            android:background="#979797" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/teacher"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/subject"
            android:textSize="12sp" />

        <View
            android:layout_width="2dp"
            android:layout_gravity="center_vertical"
            android:layout_height="12dp"
            android:layout_marginStart="20dp"
            android:background="#979797" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/teacher"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/subject"
            android:textSize="12sp" />

        <View
            android:layout_width="2dp"
            android:layout_gravity="center_vertical"
            android:layout_height="12dp"
            android:layout_marginStart="20dp"
            android:background="#979797" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/teacher"
            android:textSize="12sp" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>



    </LinearLayout>
</ScrollView>